--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,8 @@
 # ------------------LangSmith tracing------------------
 LANGCHAIN_TRACING_V2=true
 LANGCHAIN_ENDPOINT="https://api.smith.langchain.com"
-LANGCHAIN_API_KEY="YOUR_API_KEY"
-LANGCHAIN_PROJECT="YOUR_PROJECT_NAME"
+LANGCHAIN_API_KEY="paste your api key here"
+LANGCHAIN_PROJECT="project_name"
 LANGCHAIN_CALLBACKS_BACKGROUND=true
 # -----------------------------------------------------
 
